[gd_scene load_steps=5 format=2]

[ext_resource path="res://CoolLine_Max11/script/helpMenu2.gd" type="Script" id=1]
[ext_resource path="res://CoolLine_Max11/img/gui_help_menu_2.jpg" type="Texture" id=2]
[ext_resource path="res://CoolLine_Max11/font/CarterOne.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 17
outline_size = 2
outline_color = Color( 0.6, 0.384314, 0.0156863, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="helpMenu" type="Node"]
script = ExtResource( 1 )

[node name="helpPanel" type="TextureRect" parent="."]
margin_right = 504.0
margin_bottom = 895.0
texture = ExtResource( 2 )
expand = true

[node name="help_detail" type="RichTextLabel" parent="helpPanel"]
margin_left = 51.0
margin_top = 209.0
margin_right = 461.0
margin_bottom = 644.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="exitButton" type="TextureButton" parent="helpPanel"]
margin_left = 437.0
margin_top = 149.0
margin_right = 497.0
margin_bottom = 210.0
shortcut_in_tooltip = false
__meta__ = {
"_edit_lock_": true
}

[node name="nextButton" type="TextureButton" parent="helpPanel"]
margin_left = 160.0
margin_top = 651.0
margin_right = 240.0
margin_bottom = 733.0
shortcut_in_tooltip = false
__meta__ = {
"_edit_lock_": true
}
